--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
   #schedule:
   #- cron: "13 4 * * *"
-    branches: [ main ]
+    #branches:  main 
 jobs:
   build:
 
@@ -24,6 +24,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
     - name: Build with Gradle
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
